# videobackup

./: .gitignore  LICENSE  README.md  SETUP.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
systemd/: videobackup-batch.service  videobackup-batch.timer  videobackup-record.service
tests/: test_config.py  test_retention.py
videobackup/: __init__.py  config.py  encrypt.py  main.py  recorder.py  retention.py  uploader.py
